[package]
name = "gtk-rs-examples4"
version = "0.0.1"
authors = ["The Gtk-rs Project Developers"]
autobins = false

[dependencies]
chrono = "0.4"
url = "1.4"
futures-preview = { version = "0.3.0-alpha.15", optional = true}

[dependencies.atk]
git = "https://github.com/gtk-rs/atk"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
features = ["png"]

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gdk-pixbuf"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/sfanxiang/gtk-rs-gdk4"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/sfanxiang/gtk-rs-gtk4"

[features]
futures = ["futures-preview", "glib/futures", "gio/futures"]
subclassing = ["glib/subclassing"]

[[bin]]
name = "accessibility"

[[bin]]
name = "basic"

[[bin]]
name = "builder_basics"

[[bin]]
name = "builder_signal"

[[bin]]
name = "builders"

[[bin]]
name = "cairo_threads"

[[bin]]
name = "cairotest"

[[bin]]
name = "clock"

[[bin]]
name = "css"

[[bin]]
name = "drag_and_drop"

[[bin]]
name = "drag_and_drop_textview"

[[bin]]
name = "grid"

[[bin]]
name = "gtktest"

[[bin]]
name = "listbox_model"
required-features = ["gio/v2_44", "subclassing"]

[[bin]]
name = "menu_bar"

[[bin]]
name = "menu_bar_system"

[[bin]]
name = "multi_windows"

[[bin]]
name = "multithreading_context"

[[bin]]
name = "notebook"

[[bin]]
name = "overlay"

[[bin]]
name = "pango_attributes"

[[bin]]
name = "progress_tracker"
path = "src/bin/progress_tracker.rs"

[[bin]]
name = "simple_treeview"

[[bin]]
name = "sync_widgets"

[[bin]]
name = "text_viewer"

[[bin]]
name = "transparent_main_window"

[[bin]]
name = "tree_model_sort"

[[bin]]
name = "treeview"

[[bin]]
name = "list_store"

[[bin]]
name = "entry_completion"
